==> turumputum/moduleBox/components/accelStepper/accelStepper.c <==
#include <math.h>
#include "accelStepper.h"
#include <stdio.h>
#include "esp_log.h"
#include "esp_sleep.h"
#include "sdkconfig.h"
#include <esp_timer.h>
#include "driver/gptimer.h"
#include "driver/gpio.h"
#include "soc/gpio_struct.h"
#define LOG_LOCAL_LEVEL ESP_LOG_DEBUG

void setOutputPins(Stepper_t* motor, uint8_t mask)
{
    uint8_t numpins = 2;
	uint8_t i;
	for (i = 0; i < numpins; i++)
	{
		//Arduino: digitalWrite(motor->_pin[i], (mask & (1 << i)) ? (HIGH ^ motor->_pinInverted[i]) : (LOW ^ motor->_pinInverted[i]));
		if(mask & (1 << i))
		{
			if (0x11 ^ motor->_pinInverted[i]) gpio_set_level(motor->_pin[i], 1);
			else gpio_set_level(motor->_pin[i], 0);
		}
		else
		{
			if (0x00 ^ motor->_pinInverted[i]) gpio_set_level(motor->_pin[i], 1);
			else gpio_set_level(motor->_pin[i], 0);
		}
	}
}

void step(Stepper_t* motor, long step)
{
	if(((motor->_direction)&&(!motor->_dirInverted))||((!motor->_direction)&&(motor->_dirInverted))){
		GPIO.out_w1ts = ((uint32_t)1 << motor->_pin[1]);
	}else if(((motor->_direction)&&(motor->_dirInverted))||((!motor->_direction)&&(!motor->_dirInverted))){
		GPIO.out_w1tc = ((uint32_t)1 << motor->_pin[1]);
	}

	GPIO.out_w1ts = ((uint32_t)1 << motor->_pin[0]);
	motor->_pulse_up_flag=1;

}

void disableOutputs(Stepper_t* motor)
{
    if (! motor->_interface) return;

    setOutputPins(motor, 0); // Handles inversion automatically

    if (motor->_enablePin != 0xff) // If enable pin used
    {
        //Arduino: pinMode(motor->_enablePin, OUTPUT);
    	gpio_config_t io_conf ={
			.intr_type = GPIO_INTR_DISABLE,
			.mode = GPIO_MODE_OUTPUT,
			.pin_bit_mask = (1ULL << motor->_pin[0]),
			.pull_down_en = 0,
			.pull_up_en = 1
		};

        //Arduino: digitalWrite(motor->_enablePin, LOW ^ motor->_enableInverted);
        if (0x00 ^ motor->_enableInverted) gpio_set_level(motor->_enablePin, 1);
        else gpio_set_level(motor->_enablePin, 0);
    }
}

void enableOutputs(Stepper_t* motor)
{
    if (! motor->_interface) return;

	gpio_config_t io_conf_p0 ={
			.intr_type = GPIO_INTR_DISABLE,
			.mode = GPIO_MODE_OUTPUT,
			.pin_bit_mask = (1ULL << motor->_pin[0]),
			.pull_down_en = 0,
			.pull_up_en = 1
		};

	gpio_config(&io_conf_p0);

	gpio_config_t io_conf_p1 ={
			.intr_type = GPIO_INTR_DISABLE,
			.mode = GPIO_MODE_OUTPUT,
			.pin_bit_mask = (1ULL << motor->_pin[1]),
			.pull_down_en = 0,
			.pull_up_en = 1
		};

	gpio_config(&io_conf_p1);
	
    if (motor->_enablePin != 0xff)
    {
    	gpio_config_t io_conf_e ={
			.intr_type = GPIO_INTR_DISABLE,
			.mode = GPIO_MODE_OUTPUT,
			.pin_bit_mask = (1ULL << motor->_enablePin),
			.pull_down_en = 0,
			.pull_up_en = 1
		};

		gpio_config(&io_conf_e);

		if (0x11 ^ motor->_enableInverted) gpio_set_level(motor->_enablePin, 1);
		else gpio_set_level(motor->_enablePin, 0);
    }
}

void setEnablePin(Stepper_t* motor, uint16_t enablePin)
{
	motor->_enablePin = enablePin;

    // This happens after construction, so init pin now.
    if (motor->_enablePin != 0xff)
    {
        //Arduino: pinMode(motor->_enablePin, OUTPUT);
		gpio_config_t io_conf ={
			.intr_type = GPIO_INTR_DISABLE,
			.mode = GPIO_MODE_OUTPUT,
			.pin_bit_mask = (1ULL << motor->_enablePin),
			.pull_down_en = 0,
			.pull_up_en = 1
		};

		gpio_config(&io_conf);
    	//Arduino: digitalWrite(motor->_enablePin, HIGH ^ motor->_enableInverted);
		if (0x11 ^ motor->_enableInverted) gpio_set_level(motor->_enablePin, 1);
		else gpio_set_level(motor->_enablePin, 0);
    }
}
